@@ -27,7 +27,7 @@ data = tools/loom.pl
 git_remote = github
 
 [Prereq]
-Dist::Zilla               = 1.092680 ; lazy version support
+Dist::Zilla               = 1.100660 ; logging improvements
 File::Temp                = 0
 Hash::Merge::Simple       = 0
 Module::Build::ModuleInfo = 0.28
