@@ -2,6 +2,7 @@ Revision history for Dist-Zilla-PluginBundle-CJM
 
 0.02   NOT
 	- Added POD tests
+	- Use the plugin's log method so the plugin name appears in the log
 
 	Dist::Zilla::Plugin::ArchiveRelease
 	Dist::Zilla::Plugin::GitVersionCheckCJM
